Fix bugs on ios and android phones

--- a/header.css
+++ b/header.css
@@ -318,10 +318,7 @@ body {
 
     .search-label {
         display: none;
-
-        .search-input {
-            scroll-margin-top: 500px;
-        }
+        scroll-margin-top: 500px;
     }
 }
 
